<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sesion09</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="registrar">Registrar</string>
    <string name="listar">Listar</string>
    <string name="actualizar">Actualizar</string>
    <string name="cancelar">Cancelar</string>

</resources>
